--- a/views/partials/shot/footer.ejs
+++ b/views/partials/shot/footer.ejs
@@ -1,5 +1,5 @@
 <div class="p-2 bg-dark-400 border-t border-dark-100 flex justify-between">
-    <span class="text-proxblue text-sm">Logs</span>
+    <a href ="/" class="text-proxblue text-sm">home</a>
     <div class="flex items-center">
         <a href="/shot/logout" class="text-gray-400 hover:text-gray-200 text-sm mr-4">Logout</a>
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-gray-400 hover:text-gray-200">
