--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,15 +4,15 @@
 
 <title>Vazha MC</title>
 <meta name="title" content="Vazha MC" />
-<meta name="description" content="Experience the best Minecraft server - Vazha MC" />
+<meta name="description" content="A world of adventure, creativity, and endless possibilities! - Vazha MC" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://modded.tokyomc.fun/" />
+<meta property="og:url" content="https://web.vazha.fun/" />
 <meta property="og:title" content="Vazha MC" />
 <meta property="og:image" content="/img/modded-favicon.ico">
 <meta property="og:description" content="Experience the best modded Minecraft server - Vazha MC" />
-<meta property="twitter:url" content="https://modded.tokyomc.fun" />
+<meta property="twitter:url" content="https://web.vazha.fun" />
 <meta property="twitter:title" content="Vazha MC" />
-<meta property="twitter:description" content="Experience the best Minecraft server - Vazha MC" />
+<meta property="twitter:description" content="A world of adventure, creativity, and endless possibilities! - Vazha MC" />
 
 <link href="/img/modded-favicon.ico" rel="icon">
 <link href="/img/modded-favicon.ico" rel="apple-touch-icon">
