--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -9,7 +9,7 @@
 <meta property="og:url" content="https://web.vazha.fun/" />
 <meta property="og:title" content="Vazha MC" />
 <meta property="og:image" content="/img/modded-favicon.ico">
-<meta property="og:description" content="Experience the best modded Minecraft server - Vazha MC" />
+<meta property="og:description" content="A world of adventure, creativity, and endless possibilities! - Vazha MC" />
 <meta property="twitter:url" content="https://web.vazha.fun" />
 <meta property="twitter:title" content="Vazha MC" />
 <meta property="twitter:description" content="A world of adventure, creativity, and endless possibilities! - Vazha MC" />
