--- a/views/index.ejs
+++ b/views/index.ejs
@@ -250,7 +250,7 @@
                 <!-- Small character -->
                 <path class="tree-character" d="M130,160 C130,155 132,150 135,150 C138,150 140,155 140,160" fill="#10B981" />
             </svg>
-            <div class="loading-text">VAZHA MC</div>
+            <div class="loading-text">VAZHA MC S3</div>
             
             <!-- Countdown Timer -->
             <div class="countdown-container">
