--- a/views/partials/message.ejs
+++ b/views/partials/message.ejs
@@ -5,7 +5,7 @@
 
 <!-- Chat Box -->
 <div id="message-box" class="fixed bottom-16 right-5 bg-gray-800 text-white p-4 rounded-lg shadow-lg w-80 hidden">
-    <h2 class="text-lg font-semibold">Chat Bot</h2>
+    <h2 class="text-lg font-semibold">Chat BoX</h2>
 
     <!-- Chat Display -->
     <div id="chat-messages" class="h-64 overflow-y-auto bg-gray-900 p-2 rounded-lg border border-gray-700"></div>
