--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -46,6 +46,9 @@
                     <a href="/logout" class="bg-red-600 hover:bg-red-700 px-6 py-2 rounded-lg shadow-md">
                         Logout
                     </a>
+                    <a href="/media" class="bg-green-500 hover:bg-green-800 px-6 py-2 rounded-lg shadow-md">
+                        Media
+                    </a>
                 </div>
             </div>
         </div>
