--- a/views/partials/shot/sidebar.ejs
+++ b/views/partials/shot/sidebar.ejs
@@ -59,10 +59,10 @@
             </div>
         </div>
     </div>
+    <a href="/shot/media/manage" class="block text-sm py-1 px-2 hover:bg-dark-300 rounded ml-8">Manage Media</a>
 </div>
 
 <script>
-    // Toggle Users Submenu
     document.getElementById("toggle-users").addEventListener("click", function() {
         const submenu = document.getElementById("user-submenu");
         const arrow = document.getElementById("user-arrow");
@@ -71,7 +71,6 @@
         arrow.classList.toggle("rotate-180");
     });
 
-    // Toggle Msg Data Submenu
     document.getElementById("toggle-msg-data").addEventListener("click", function() {
         const submenu = document.getElementById("msg-data-submenu");
         const arrow = document.getElementById("msg-data-arrow");
